# ScalaParBiBit

./: Bicluster.cpp  Bicluster.h  CMakeLists.txt  FileWorker.cpp  FileWorker.h  InputMatrix.cpp  InputMatrix.h  Macros.h  Makefile  MurmurHash.h  Options.cpp  Options.h  README.md  ServerState.cpp  ServerState.h  ThreadHandler.cpp  ThreadHandler.h  UnorderedVarSet.h  Utils.cpp  Utils.h  allocator.cpp  allocator.h  example.arff  main.cpp  murmurhash.cpp
arff/: arff_lexer.cpp  arff_parser.cpp  arff_scanner.cpp  arff_token.cpp  arff_token.h
data/: ownTest_12800_100_10.arff  ownTest_12800_100_15.arff
